--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.gc.triprec">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- A camera with RAW capability is required to use this application -->
@@ -25,8 +25,9 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".TripRecService" />
+        <service android:name=".TripRecService" />
+
+        <activity android:name=".SettingActivity"></activity>
     </application>
 
 </manifest>
