--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.gc.triprec"
-        minSdkVersion 25
+        minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -24,11 +24,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    allprojects {
+        repositories {
+            jcenter()
+        }
+    }
     compile "com.android.support:support-v4:26.1.0"
     compile "com.android.support:support-v13:26.1.0"
     compile "com.android.support:cardview-v7:26.1.0"
     compile "com.android.support:appcompat-v7:26.1.0"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.otaliastudios:cameraview:1.4.1'
     testCompile 'junit:junit:4.12'
 }
