--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,11 @@ dependencies {
     compile "com.android.support:appcompat-v7:26.1.0"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.otaliastudios:cameraview:1.4.1'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
+    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
     testCompile 'junit:junit:4.12'
 }
