--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
+    // This is handled for you by the 2.0+ Gradle Plugin
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -32,6 +38,7 @@ dependencies {
     }
     compile "com.android.support:support-v4:26.1.0"
     compile "com.android.support:support-v13:26.1.0"
+
     compile "com.android.support:cardview-v7:26.1.0"
     compile "com.android.support:appcompat-v7:26.1.0"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -43,5 +50,6 @@ dependencies {
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'com.android.support:design:26.1.0'
     testCompile 'junit:junit:4.12'
 }
