--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -36,20 +36,20 @@ dependencies {
             jcenter()
         }
     }
-    compile "com.android.support:support-v4:26.1.0"
-    compile "com.android.support:support-v13:26.1.0"
+    implementation "com.android.support:support-v4:26.1.0"
+    implementation "com.android.support:support-v13:26.1.0"
 
-    compile "com.android.support:cardview-v7:26.1.0"
-    compile "com.android.support:appcompat-v7:26.1.0"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.otaliastudios:cameraview:1.4.1'
-    compile 'com.baoyz.swipemenulistview:library:1.3.0'
-    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
-    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
-    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
-    compile 'com.github.chrisbanes:PhotoView:2.0.0'
-    compile 'com.android.support:design:26.1.0'
-    testCompile 'junit:junit:4.12'
+    implementation "com.android.support:cardview-v7:26.1.0"
+    implementation "com.android.support:appcompat-v7:26.1.0"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.otaliastudios:cameraview:1.4.1'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.android.support:design:26.1.0'
+    testImplementation 'junit:junit:4.12'
 }
